--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ server.port=8080
 
 #cofigure database
 
-spring.datasource.url=jdbc:mysql://localhost:3306/scrutinyglobal
+spring.datasource.url=jdbc:mysql://scrutinyglobal.c5sueiccsnzn.ap-southeast-2.rds.amazonaws.com:3306/scrutinyglobal
 
-spring.datasource.username=root
+spring.datasource.username=admin
 
-spring.datasource.password=Ashish@29
+spring.datasource.password=admin1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
