--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=ScrutinyGlobal
 #configuration file
 server.port=8080
-
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.same-site=Lax
 #cofigure database
 
 spring.datasource.url=jdbc:mysql://scrutinyglobal.c5sueiccsnzn.ap-southeast-2.rds.amazonaws.com:3306/scrutinyglobal
@@ -17,4 +18,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.show-sql=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=testingdummy892@gmail.com
+spring.mail.password=pbuhacimyndahvpy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
