--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		 <dependency>
+	      <groupId>org.springframework.session</groupId>
+	      <artifactId>spring-session-core</artifactId>
+	    </dependency>
+	     
+
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
