--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=ScrutinyGlobal
 #configuration file
 server.port=8080
-server.servlet.session.timeout=30m
-server.servlet.session.cookie.same-site=Lax
+server.servlet.session.timeout=1800
+#spring.session.store-type=jdbc
+#server.servlet.session.cookie.http-only=true
+#server.servlet.session.cookie.secure=true
 #cofigure database
 
 spring.datasource.url=jdbc:mysql://scrutinyglobal.c5sueiccsnzn.ap-southeast-2.rds.amazonaws.com:3306/scrutinyglobal
